# projeto-streamlit

./: Cadastro.py  clientes.csv  pyproject.toml
