[project]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiago Goes"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
